<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/calendarFragment">

    <fragment
        android:id="@+id/calendarFragment"
        android:name="com.queenonpencil.ui.calendar.CalendarFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_calendar_to_graftEdit"
            app:destination="@id/graftEditFragment" />
    </fragment>

    <fragment
        android:id="@+id/graftEditFragment"
        android:name="com.queenonpencil.ui.graft.GraftEditFragment"
        android:label="@string/edit_grafting">
        <argument
            android:name="graftId"
            app:argType="long"
            android:defaultValue="0L" />
    </fragment>

    <fragment
        android:id="@+id/archiveFragment"
        android:name="com.queenonpencil.ui.archive.ArchiveFragment"
        android:label="@string/archive">
        <action
            android:id="@+id/action_archive_to_graftEdit"
            app:destination="@id/graftEditFragment" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.queenonpencil.ui.settings.SettingsFragment"
        android:label="@string/settings" />

    <fragment
        android:id="@+id/journalFragment"
        android:name="com.queenonpencil.ui.journal.JournalFragment"
        android:label="@string/journal" />
</navigation>
